--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "react-spinners": "^0.13.8",
     "typescript": "5.0.2"
